--- a/UI/components/Images/styles/web-p2p-lending-platform.scss
+++ b/UI/components/Images/styles/web-p2p-lending-platform.scss
@@ -99,7 +99,6 @@
       max-width: $default-content-width;
       height: 90vw;
       max-height: 706px;
-      margin-top: -40px;
       overflow: visible;
     }
 
