--- a/UI/sections/ImagesSection/styles/web-p2p-lending-platform.scss
+++ b/UI/sections/ImagesSection/styles/web-p2p-lending-platform.scss
@@ -20,6 +20,10 @@
     padding-top: 0;
     padding-bottom: 0;
 
+    .titleStyle {
+      margin-bottom: 0;
+    }
+
     @include tablet {
       padding: 0 16px 60px;
     }
