--- a/UI/sections/ResultsSection/styles/web-p2p-lending-platform.scss
+++ b/UI/sections/ResultsSection/styles/web-p2p-lending-platform.scss
@@ -1,5 +1,5 @@
 .web-p2p-lending-platform {
-  padding: 30px 16px;
+  padding: 0 16px 30px;
 
   .sectionTitle {
     max-width: $wide-content-width;
